pushing code. managed to inetgrate moment js. still trying tof igure out how to get time to fill into each new hour id, instead of just in one

--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ textarea{
   color: white;
 }
 
+div {
+  border: 1px #000000;
+};
+
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
